infra/k8s/kafka-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  # namespace: kafka
spec:
  serviceName: kafka
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
          command: ["/bin/bash"]
          args:
            - -c
            - |
              export KAFKA_CFG_NODE_ID=$(echo ${POD_NAME} | sed 's/.*-//')
              /opt/bitnami/scripts/kafka/entrypoint.sh /opt/bitnami/scripts/kafka/run.sh
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi


---
apiVersion: v1
kind: Service
metadata:
  name: kafka                               #  Headless service for stable DNS
  # namespace: kafka
spec:
  clusterIP: None                           #  Important! Makes the service headless
  selector:
    app: kafka                              #  Must match pod label
  ports:
    - port: 9092
      name: kafka
    - port: 9093
      name: controller
