infra/k8s/kafka-statefulset.yaml
# infra/k8s/kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 30  # Give Kafka enough time to start
            periodSeconds: 5         # Check every 5 seconds
            failureThreshold: 6      # Allow 6 failures (30 seconds) before marking unready
                
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi


---
apiVersion: v1
kind: Service
metadata:
  name: kafka                               #  Headless service for stable DNS
spec:
  clusterIP: None                           #  Important! Makes the service headless
  selector:
    app: kafka                              #  Must match pod label
  ports:
    - port: 9092
      name: kafka
    - port: 9093
      name: controller





          # command: ["/bin/bash"]
          # args:
          #   - -c
          #   - |
          #     export KAFKA_CFG_NODE_ID=$(echo ${POD_NAME} | sed 's/.*-//')
          #     export KAFKA_CFG_ADVERTISED_LISTENERS="PLAINTEXT://${POD_NAME}.kafka.default.svc.cluster.local:9092"
          #     /opt/bitnami/scripts/kafka/entrypoint.sh /opt/bitnami/scripts/kafka/run.sh
