infra/k8s/kafka-ui-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui                               #  Headless service for stable DNS
spec:
  selector:
    app: kafka-ui                              #  Must match pod label
  ports:
    - port: 8080
      name: kafka-ui
