infra/k8s/notification-mongo-statefulset.yaml
# infra/k8s/auth-mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notification-mongo-statefulset # K8s will prefix pod names with this. You’ll get:
spec:
  serviceName: "notification-mongo"
  replicas: 1  # set >1 for replica set
  selector:
    matchLabels:
      app: notification-mongodb
  template:
    metadata:
      labels:
        app: notification-mongodb
    spec:
      containers:
        - name: notification-mongo
          image: mongo:latest

          
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: notification-mongo-service
spec:
  clusterIP: None
  selector:
    app: notification-mongodb
  ports:
    - port: 27017
      name: mongodb
