infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: navasnoozy/products:latest # Replace with your Docker image name
          imagePullPolicy: Never # Use 'Never' if you're using local Docker images with Minikube or Docker Desktop
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products # This must match the labels on your pods/deployment
  ports:
    - name: products
      protocol: TCP
      port: 3000 # Port that the service exposes internally
      targetPort: 3000 # Port your container is listening on (e.g., Express.js app)
