infra/k8s/products-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-mongo-depl # K8s will prefix pod names with this. You’ll get:
spec:
  serviceName: "products-mongo"
  replicas: 1  # set >1 for replica set
  selector:
    matchLabels:
      app: products-mongodb
  template:
    metadata:
      labels:
        app: products-mongodb
    spec:
      containers:
        - name: products-mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

---

apiVersion: v1
kind: Service
metadata:
  name: products-mongo-service
spec:
  clusterIP: None
  selector:
    app: products-mongodb
  ports:
    - port: 27017
      name: mongodb
