infra/k8s/ingress-srv.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: millionsclub.local
      http:
        paths:
          - path: /api/users/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
          - path: /api/products/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service 
                port:
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          # - path: /.*
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: client-service
          #       port:
          #         number: 3000
